--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div><p>kjaskdajld</p>
                     <blockquote class="comment">
                       <p class="p-comment">
-                        “Todo espectacular he te la suerte de reservar justo en una super oferta que lanzaron y realmente todo superó mis espectativas.”
+                        “Todo espacular he te la suerte de reservar justo en una super oferta que lanzaron y realmente todo superó mis espectativas.”
                       </p>
                     </blockquote>
                   </div>
