se cargan los archivos nuevos

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
     </div>
 
       <div class="col-12 mt-4 text-alignC">
-        <p>todo los derechos reservados ] Hotel Soleares 2024</p>
+        <p>todo los derechos reservados | Hotel Soleares 2024</p>
       </div>
     </div>
   </div>
