--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -59,7 +59,7 @@
           </li>
           <li>
           <a href="" class="redessociales">
-            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+            <i class="fa fa-facebook-square" aria-hidden="true">kjlkj</i>
           </a>
         </li>
         <li>
@@ -192,7 +192,7 @@
           </div>
       
             <div class="col-12 mt-4 text-alignC">
-              <p>todo los derechos reservados ] Hotel Soleares 2024</p>
+              <p>todo los derechos reservados | Hotel Soleares 2024</p>
             </div>
           </div>
         </div>
