--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -175,7 +175,7 @@
     </div>
 
       <div class="col-12 mt-4 text-alignC">
-        <p>todo los derechos reservados ] Hotel Soleares 2024</p>
+        <p>todo los derechos reservados | Hotel Soleares 2024</p>
       </div>
     </div>
   </div>
