agregado de enlaces de redes sociales

--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
           Siguenos en:
           </li>
           <li>
-          <a href="" class="redessociales">
+          <a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA" class="redessociales">
             <i class="fa fa-facebook-square" aria-hidden="true"></i>
           </a>
         </li>
         <li>
-          <a href="">
+          <a href="https://www.instagram.com/hotelsoleares/">
           <i class="fa fa-instagram" aria-hidden="true"></i>
           </a>
         </li>
@@ -214,9 +214,9 @@
       <h3>Siguenos:</h3>
       <hr>
       <ul>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Whatsapp</a></li>
+        <li><a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA">Facebook</a></li>
+        <li><a href="https://www.instagram.com/hotelsoleares/">Instagram</a></li>
+        <li><a href="https://api.whatsapp.com/send/?phone=5492233425621&text&type=phone_number&app_absent=0">Whatsapp</a></li>
       </ul>
     </div>
 
