archivo hola y footer cambiados

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div><p>kjaskdajld</p>
                     <blockquote class="comment">
                       <p class="p-comment">
-                        “Todo espacular he te la suerte de reservar justo en una super oferta que lanzaron y realmente todo superó mis espectativas.”
+                        “Todo espectacular he te la suerte de reservar justo en una super oferta que lanzaron y realmente todo superó mis espectativas.”
                       </p>
                     </blockquote>
                   </div>
@@ -204,7 +204,7 @@
       <ul>
         <li><a href="">Inicio</a></li>
         <li><a href="">Habitaciones</a></li>
-        <li><a href=""> Servicios</a></li>
+        <li><a href="">Servicios</a></li>
         <li><a href="">Lugares de interes</a></li>
         <li><a href="">Contacto</a></li>
       </ul>
@@ -221,7 +221,7 @@
     </div>
 
       <div class="col-12 mt-4 text-alignC">
-        <p>todo los derechos reservados | Hotel Soleares 2024</p>
+        <p>Hotel Soleares 2024. Todo los derechos reservados </p>
       </div>
     </div>
   </div>
