--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
-          <a class="navbar-brand logo" href="#"><img src="/img/logo-nav2.png"></a>
+          <a class="navbar-brand logo" href="#"><img src="img/logo-nav2.png"></a>
 
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
             <ul class="navbar-nav nav-fs">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/index.html">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pages/habitaciones.html">Habitaciones</a>
@@ -79,7 +79,7 @@
       <main>
 
         <section>
-          <img src="/img/banner.jpg" class="banner">
+          <img src="img/banner.jpg" class="banner">
 
         </div>
 
@@ -98,7 +98,7 @@
               <div class="cont-comment">
                   <div class="card-comment">
                     <div class="card-comment-header">
-                      <img src="/img/descarga.jfif" class="avatar">
+                      <img src="img/descarga.jfif" class="avatar">
                       <div class="title-user">
                           <div class="comment-name">
                             <b>Diego</b>
@@ -121,7 +121,7 @@
 
                   <div class="card-comment">
                     <div class="card-comment-header">
-                      <img src="/img/avatar-a.png" class="avatar">
+                      <img src="img/avatar-a.png" class="avatar">
                       <div class="title-user">
                           <div class="comment-name">
                             <b>Antonella</b>
@@ -144,7 +144,7 @@
 
                   <div class="card-comment">
                     <div class="card-comment-header">
-                      <img src="/img/avatar-r.png" class="avatar">
+                      <img src="img/avatar-r.png" class="avatar">
                       <div class="title-user">
                           <div class="comment-name">
                             <b>Roberto</b>
