modificacion index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
             <ul class="navbar-nav nav-fs">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pages/habitaciones.html">Habitaciones</a>
