--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <title>Hotel Soleares</title>
 </head>
 <body>
-    <header style="background-color: aquamarine;">
+    <header>
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
-          <a class="navbar-brand logo" href="#"><img src="img/logo-nav2.png"></a>
+          <a class="navbar-brand logo" href="#">
+            <img src="img/logo-nav2.png">
+          </a>
 
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
