--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
       <nav class="redes-sociales">
         <ul>
           <li>
-            <span class="text-gray">Reservas por Whatsapp al:</span>&nbsp;
+            <span class="text-gray">Reserva por Whatsapp al:</span>&nbsp;
             <i class="fa-brands fa-whatsapp text-white mr-4"></i>
             0223-3425621 &nbsp; | 
           </li>
