arreglo de rutas de archivos de la carpeta pages

--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/estilos.css" rel="stylesheet">
-    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="../css/estilos.css" rel="stylesheet">
+    <link href="..css/normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6421b44a28.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
-          <a class="navbar-brand logo" href="#"><img src="/img/logo-nav2.png"></a>
+          <a class="navbar-brand logo" href="#"><img src="../img/logo-nav2.png"></a>
 
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
             <ul class="navbar-nav nav-fs">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="habitaciones.html">Habitaciones</a>
@@ -84,7 +84,7 @@
             <!-- cards -->
             <div class="cont-cards" style="display: flex;flex-direction: row; gap: 20px; justify-content: space-around;">
             <div class="card" style="width: 22rem;">
-              <img src="/img/playas.png" class="card-img-top" alt="...">
+              <img src="../img/playas.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Playas de Punta Mogotes</h5>
                 <p class="card-text">
@@ -94,7 +94,7 @@
             </div>
 
             <div class="card" style="width: 22rem;">
-              <img src="/img/puerto.png" class="card-img-top" alt="...">
+              <img src="../img/puerto.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Puerto de Mar del Plata</h5>
                 <p class="card-text"> &nbsp;Es una mezcla viva de tradición y modernidad. Reconocido por su flota pesquera, es un lugar donde las embarcaciones coloridas se alinean a lo largo de sus muelles, mientras que los lobos marinos toman el sol y juegan en sus bordes. Los visitantes pueden pasear y disfrutar del aire fresco del mar, degustar los más frescos frutos del mar en los restaurantes locales, o simplemente observar el ir y venir de los barcos.</p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card" style="width: 22rem;">
-              <img src="/img/bosque.png" class="card-img-top" alt="...">
+              <img src="../img/bosque.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Bosque Peralta Ramos</h5>
                 <p class="card-text"> &nbsp;Es un oasis verde en medio de la vibrante Mar del Plata. Este parque forestal de más de 400 hectáreas es un refugio de tranquilidad, con senderos serpenteantes que atraviesan densos pinares y eucaliptos. Es el lugar ideal para quienes buscan desconectar del ruido de la ciudad y conectarse con la naturaleza. Se pueden escuchar los cantos de las aves, respirar el aire fresco con aroma a pino y descubrir pequeñas cafeterías y restaurantes escondidos entre los árboles.</p>
