--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/estilos.css" rel="stylesheet">
-    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="../css/estilos.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6421b44a28.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
-          <a class="navbar-brand logo" href="#"><img src="/img/logo-nav2.png"></a>
+          <a class="navbar-brand logo" href="#"><img src="../img/logo-nav2.png"></a>
 
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,7 +27,7 @@
           <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
             <ul class="navbar-nav nav-fs">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page"  href="habitaciones.html">Habitaciones</a>
@@ -87,7 +87,7 @@
             <!-- cards -->
             <div class="cont-cards" style="display: flex;flex-direction: row; gap: 20px; justify-content: space-around;">
             <div class="card" style="width: 22rem;">
-              <img src="/img/hab1.png" class="card-img-top" alt="...">
+              <img src="../img/hab1.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Habitacion doble</h5>
                 <p class="card-text">
@@ -97,7 +97,7 @@
             </div>
 
             <div class="card" style="width: 22rem;">
-              <img src="/img/hab2.png" class="card-img-top" alt="...">
+              <img src="../img/hab2.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Habitacion doble Triple</h5>
                 <p class="card-text">Cuentan con una cama de dos plazas y otras de tres  camas individuales</p>
@@ -105,7 +105,7 @@
             </div>
 
             <div class="card" style="width: 22rem;">
-              <img src="/img/hab3.png" class="card-img-top" alt="...">
+              <img src="../img/hab3.png" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Habitacion cuadruple</h5>
                 <p class="card-text">Contamos con habitaciones para cuatro personas, distribuidas en una cama de dos plazas y dos cama de una plaza.</p>
