--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/estilos.css" rel="stylesheet">
-    <link href="/css/normalize.css" rel="stylesheet">
+    <link href="../css/estilos.css" rel="stylesheet">
+    <link href="../css/normalize.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/6421b44a28.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
-          <a class="navbar-brand logo" href="#"><img src="/img/logo-nav2.png"></a>
+          <a class="navbar-brand logo" href="#"><img src="../img/logo-nav2.png"></a>
 
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
           <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
             <ul class="navbar-nav nav-fs">
               <li class="nav-item">
-                <a class="nav-link" href="/index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="habitaciones.html">Habitaciones</a>
@@ -86,13 +86,13 @@
                <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/img/hab1.png" class="d-block w-100" alt="...">
+                    <img src="../img/hab1.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/hab2.png" class="d-block w-100" alt="...">
+                    <img src="../img/hab2.png" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="/img/hab3.png" class="d-block w-100" alt="...">
+                    <img src="../img/hab3.png" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
