modificado titulo contactenos

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -89,7 +89,7 @@
   <div class="container">
     <div class="row mt-2">
 
-      <div class="col-6"> <h3>Contacte</h3>
+      <div class="col-6"> <h3>Contactenos</h3>
         <hr>
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Nombre completo:</label>
