ruta a index arreglada

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
         <ul class="navbar-nav nav-fs">
           <li class="nav-item">
-            <a class="nav-link" href="/index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="habitaciones.html">Habitaciones</a>
