--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -121,7 +121,7 @@
         
         <article class="alert-warning alert container info-advice">
 
-          <p>Durante Enero y Febrero, alojandote en nuestro Hotel, tendras 10% de descuento en Balneario 23 y 19 de Punta Mogotes</p>
+          <p>Durante Enero y Febrero alojandote en nuestro Hotel, tendras 50% de descuento en los Balnearios 22 y 23.</p>
 
         </article>
 
