rutas footer, y estilos en linea cambiados

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -117,7 +117,7 @@
         </ul>
 
       <!-- iframe google maps -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1867.802231608957!2d-57.549805959844626!3d-38.0644094409615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584ddff20a3c47b%3A0xc46918bea282a81e!2sHotel%20Soleares%20-%20Alojamiento%20en%20Mar%20del%20Plata%20-%20Hotel%20en%20Punta%20Mogotes!5e0!3m2!1ses!2sar!4v1697121137066!5m2!1ses!2sar" width="100%" height="320" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1867.802231608957!2d-57.549805959844626!3d-38.0644094409615!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9584ddff20a3c47b%3A0xc46918bea282a81e!2sHotel%20Soleares%20-%20Alojamiento%20en%20Mar%20del%20Plata%20-%20Hotel%20en%20Punta%20Mogotes!5e0!3m2!1ses!2sar!4v1697121137066!5m2!1ses!2sar"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map-google"></iframe>
       <!-- end iframe google maps -->
       </div>
     </div>
@@ -153,11 +153,11 @@
       <h3>Mapa del sitio</h3>
       <hr>
       <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Habitaciones</a></li>
-        <li><a href=""> Servicios</a></li>
-        <li><a href="">Lugares de interes</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="habitaciones.html">Habitaciones</a></li>
+        <li><a href="servicios.html"> Servicios</a></li>
+        <li><a href="paseos.html">Lugares de interes</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </div>
 
@@ -165,9 +165,9 @@
       <h3>Siguenos:</h3>
       <hr>
       <ul>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Whatsapp</a></li>
+        <li><a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA">Facebook</a></li>
+        <li><a href="https://www.instagram.com/hotelsoleares/">Instagram</a></li>
+        <li><a href="https://api.whatsapp.com/send/?phone=5492233425621&text&type=phone_number&app_absent=0">Whatsapp</a></li>
       </ul>
     </div>
 
