--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     
-  <header style="background-color: aquamarine;">
+  <header>
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
@@ -85,9 +85,9 @@
             <h3>Habitaciones</h3>
             <hr>
             <!-- cards -->
-            <div class="cont-cards" style="display: flex;flex-direction: row; gap: 20px; justify-content: space-around;">
-            <div class="card" style="width: 22rem;">
-              <img src="../img/hab1.png" class="card-img-top" alt="...">
+            <div class="cont-cards">
+            <div class="card">
+              <img src="../img/hab1.png" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Habitacion doble</h5>
                 <p class="card-text">
@@ -96,16 +96,16 @@
               </div>
             </div>
 
-            <div class="card" style="width: 22rem;">
-              <img src="../img/hab2.png" class="card-img-top" alt="...">
+            <div class="card">
+              <img src="../img/hab2.png" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Habitacion doble Triple</h5>
                 <p class="card-text">Cuentan con una cama de dos plazas y otras de tres  camas individuales</p>
               </div>
             </div>
 
-            <div class="card" style="width: 22rem;">
-              <img src="../img/hab3.png" class="card-img-top" alt="...">
+            <div class="card">
+              <img src="../img/hab3.png" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Habitacion cuadruple</h5>
                 <p class="card-text">Contamos con habitaciones para cuatro personas, distribuidas en una cama de dos plazas y dos cama de una plaza.</p>
@@ -156,11 +156,11 @@
       <h3>Mapa del sitio</h3>
       <hr>
       <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Habitaciones</a></li>
-        <li><a href=""> Servicios</a></li>
-        <li><a href="">Lugares de interes</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="habitaciones.html">Habitaciones</a></li>
+        <li><a href="servicios.html"> Servicios</a></li>
+        <li><a href="paseos.html">Lugares de interes</a></li>
+        <li><a href="contacto.html">Contacto</a></li>
       </ul>
     </div>
 
@@ -168,9 +168,9 @@
       <h3>Siguenos:</h3>
       <hr>
       <ul>
-        <li><a href="">Facebook</a></li>
-        <li><a href="">Instagram</a></li>
-        <li><a href="">Whatsapp</a></li>
+        <li><a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA">Facebook</a></li>
+        <li><a href="https://www.instagram.com/hotelsoleares/">Instagram</a></li>
+        <li><a href="https://api.whatsapp.com/send/?phone=5492233425621&text&type=phone_number&app_absent=0">Whatsapp</a></li>
       </ul>
     </div>
 
