--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -13,7 +13,7 @@
     <title>Hotel Soleares</title>
 </head>
 <body>
-  <header style="background-color: aquamarine;">
+  <header>
     <nav class="navbar navbar-expand-lg bg-white d-flex ">
                 <div class="container-lg">
 
@@ -173,11 +173,11 @@
             <h3>Mapa del sitio</h3>
             <hr>
             <ul>
-              <li><a href="">Inicio</a></li>
-              <li><a href="">Habitaciones</a></li>
-              <li><a href=""> Servicios</a></li>
-              <li><a href="">Lugares de interes</a></li>
-              <li><a href="">Contacto</a></li>
+              <li><a href="../index.html">Inicio</a></li>
+              <li><a href="habitaciones.html">Habitaciones</a></li>
+              <li><a href="servicios.html"> Servicios</a></li>
+              <li><a href="paseos.html">Lugares de interes</a></li>
+              <li><a href="contacto.html">Contacto</a></li>
             </ul>
           </div>
       
@@ -185,9 +185,9 @@
             <h3>Siguenos:</h3>
             <hr>
             <ul>
-              <li><a href="">Facebook</a></li>
-              <li><a href="">Instagram</a></li>
-              <li><a href="">Whatsapp</a></li>
+              <li><a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA">Facebook</a></li>
+              <li><a href="https://www.instagram.com/hotelsoleares/">Instagram</a></li>
+              <li><a href="https://api.whatsapp.com/send/?phone=5492233425621&text&type=phone_number&app_absent=0">Whatsapp</a></li>
             </ul>
           </div>
       
