--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
                             <i class="fa fa-star text-warning" aria-hidden="true"></i>
                           </div>
                         </div>
-                    </div><p>kjaskdajld</p>
+                    </div>
                     <blockquote class="comment">
                       <p class="p-comment">
-                        “Todo espectacular he te la suerte de reservar justo en una super oferta que lanzaron y realmente todo superó mis espectativas.”
+                        “Todo espectacular he tenido la suerte de reservar justo en una super oferta que lanzaron y realmente todo superó mis espectativas.”
                       </p>
                     </blockquote>
                   </div>
@@ -174,6 +174,13 @@
         </div>
 
       </section>
+
+
+      <article class="alert-warning alert container info-advice">
+
+        <p>Durante Enero y Febrero alojandote en nuestro Hotel, tendras 50% de descuento en los Balnearios 22 y 23.</p>
+
+      </article>
         
       </main>
 
@@ -204,11 +211,11 @@
       <h3>Mapa del sitio</h3>
       <hr>
       <ul>
-        <li><a href="">Inicio</a></li>
-        <li><a href="">Habitaciones</a></li>
-        <li><a href="">Servicios</a></li>
-        <li><a href="">Lugares de interes</a></li>
-        <li><a href="">Contacto</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="pages/habitaciones.html">Habitaciones</a></li>
+        <li><a href="pages/servicios.html"> Servicios</a></li>
+        <li><a href="pages/paseos.html">Lugares de interes</a></li>
+        <li><a href="pages/contacto.html">Contacto</a></li>
       </ul>
     </div>
 
