--- a/index.html
+++ b/index.html
@@ -174,56 +174,80 @@
         <!-- end main contenido -->
 
         <!-- footer -->
-        <footer class="bg-dark mt-4">
-          <div class="container">
-            <div class="row footer-items">
-              <div class="col-3">
-                <h3>Hotel soleares</h3>
-                <hr>
-                <p>Desde 1985, atendido por sus dueños, haciendo que pases las mejores vacaciones en familia.
-                ¡Te Esperamos!</p>
-              </div>
-
-              <div class="col-3">
-                <h3>Datos del Hotel</h3>
-                <hr>
-                <ul>
-                  <li>Gral.Pacheco 2168, Mar del Plata</li>
-                  <li>info@hotelsoleares.com.ar</li>
-                  <li> +54 9 223 4840818</li>
-                  <li>+54 9 223 4842794</li>
-                </ul>
-              </div>
-
-              <div class="col-3">
-                <h3>Mapa del sitio</h3>
-                <hr>
-                <ul>
-                  <li><a href="index.html">Inicio</a></li>
-                  <li><a href="pages/habitaciones.html">Habitaciones</a></li>
-                  <li><a href="pages/servicios.html"> Servicios</a></li>
-                  <li><a href="pages/paseos.html">Lugares de interes</a></li>
-                  <li><a href="pages/contacto.html">Contacto</a></li>
-                </ul>
-              </div>
-
-              <div class="col-3">
-                <h3>Siguenos:</h3>
-                <hr>
-                <ul>
-                  <li><a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA">Facebook</a></li>
-                  <li><a href="https://www.instagram.com/hotelsoleares/">Instagram</a></li>
-                  <li><a href="https://api.whatsapp.com/send/?phone=5492233425621&text&type=phone_number&app_absent=0">Whatsapp</a></li>
-                </ul>
-              </div>
-
-              <div class="col-12 mt-4 text-alignC">
-                <p>Hotel Soleares 2024. Todo los derechos reservados </p>
-              </div>
-            </div>
+    <footer class="bg-dark mt-4">
+      <div class="container">
+        <div class="row footer-items">
+          <div class="col-3">
+            <h3>Hotel soleares</h3>
+            <hr>
+            <p>Desde 1985, atendido por sus dueños, haciendo que pases las mejores vacaciones en familia.</p>
+            <p>¡Te Esperamos!</p>
           </div>
-        </footer>
-      <!-- end footer -->
+
+          <div class="col-3">
+            <h3>Datos del Hotel</h3>
+            <hr>
+            <ul>
+              <li>
+              <i class="fa fa-map-marker icon-footer" aria-hidden="true"></i>
+              Gral.Pacheco 2168, Mar del Plata
+              </li>
+              <li>
+              <i class="fa fa-envelope icon-footer" aria-hidden="true"></i>
+              info@hotelsoleares.com.ar
+              </li>
+              <li>
+              <i class="fa fa-phone icon-footer" aria-hidden="true"></i>
+              +54 9 223 4840818</li>
+              <li>
+              <i class="fa-brands fa-whatsapp text-white mr-4 icon-footer"></i>
+              223-3425621
+            </li>
+            </ul>
+          </div>  
+          <div class="col-3">
+            <h3>Mapa del sitio</h3>
+            <hr>
+            <ul>
+              <li><a href="index.html">Inicio</a></li>
+              <li><a href="pages/habitaciones.html">Habitaciones</a></li>
+              <li><a href="pages/servicios.html"> Servicios</a></li>
+              <li><a href="pages/paseos.html">Lugares de interes</a></li>
+              <li><a href="pages/contacto.html">Contacto</a></li>
+            </ul>
+          </div>
+
+          <div class="col-3">
+            <h3>Siguenos:</h3>
+            <hr>
+            <ul class="footer-social">
+              <li>
+                <a href="https://www.facebook.com/HotelSolearesMDP/?locale=es_LA">
+                <i class="fa fa-facebook-square icon-footer" aria-hidden="true"></i>
+                Facebook
+              </a>
+              </li>
+              <li><a href="https://www.instagram.com/hotelsoleares/">
+              <i class="fa fa-instagram icon-footer" aria-hidden="true"></i>
+              Instagram
+            </a>
+            </li>
+            <li>
+                <a href="https://api.whatsapp.com/send/?phone=5492233425621&text&type=phone_number&app_absent=0">
+                  <i class="fa fa-whatsapp icon-ws-footer icon-footer" aria-hidden="true"></i>
+                Whatsapp
+              </a>
+            </li>
+            </ul>
+          </div>
+
+          <div class="col-12 mt-4 text-alignC">
+            <p>Hotel Soleares 2024. Todo los derechos reservados </p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- end footer -->
       <!--script js bootstrap--->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
       </body>
