modificacion banner, arreglo de enlaces y menu nav

--- a/index.html
+++ b/index.html
@@ -79,11 +79,17 @@
 
         <!-- main y contenido del sitio -->
         <main>
-          <div>
-            <img src="img/banner.jpg" class="banner">
+          <div class="banner">
+            
+            <div class="cont-p">
+            <p class="text-banner">
+              Bienvenido a Hotel Soleares: tu destino perfecto para vacaciones unas inolvidables en Mar del Plata. Con ambiente acogedor y familiar.Contamos con diversos medios de pago para tu comodidad. ¡Haz de tu estadia una experiencia única y placentera!
+              </p>
+            </div>
+            
           </div>
 
-          <section class="container-fluid pt-5 bg-com">
+          <section class="container-fluid pt-4 bg-com">
             <div class="container">
               <div class="titulo-booking">
                 <h2>HUESPEDES CONTENTOS!</h2>
