--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -29,10 +29,10 @@
             <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
               <ul class="navbar-nav nav-fs">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="habitaciones.html">Habitaciones</a>
+                  <a class="nav-link active" aria-current="page" href="habitaciones.html">Habitaciones</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="servicios.html">Servicios</a>
