--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -29,7 +29,7 @@
             <div class="collapse navbar-collapse jcflex-end" id="navbarNav">
               <ul class="navbar-nav nav-fs">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                  <a class="nav-link" href="../index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="habitaciones.html">Habitaciones</a>
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="paseos.html">Lugares de interes</a>
+                  <a class="nav-link active" aria-current="page" href="paseos.html">Lugares de interes</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contacto.html">Contacto</a>
