--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -164,11 +164,11 @@
           <h3>Mapa del sitio</h3>
           <hr>
           <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pages/habitaciones.html">Habitaciones</a></li>
-            <li><a href="pages/servicios.html"> Servicios</a></li>
-            <li><a href="pages/paseos.html">Lugares de interes</a></li>
-            <li><a href="pages/contacto.html">Contacto</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="habitaciones.html">Habitaciones</a></li>
+            <li><a href="servicios.html"> Servicios</a></li>
+            <li><a href="paseos.html">Lugares de interes</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </div>
 
