--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -56,7 +56,7 @@
               </li>
               <li>
               <a href="" class="redessociales">
-              <i class="fa fa-facebook-square" aria-hidden="true">kjlkj</i>
+              <i class="fa fa-facebook-square" aria-hidden="true"></i>
               </a>
               </li>
               <li>
