arreglo de footer para smarthphone

--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
           </div>
 
           <div class="col-lg-3 col-md-6 col-xs-6">
-            <h3>Datos del Hotel</h3>
-            <hr>
-            <ul>
+            <h3 class="ds-none">Datos del Hotel</h3>
+            <hr class="ds-none">
+            <ul class="info-footer">
               <li>
               <i class="fa fa-map-marker icon-footer" aria-hidden="true"></i>
               Gral.Pacheco 2168, Mar del Plata
@@ -209,6 +209,16 @@
               <i class="fa-brands fa-whatsapp text-white mr-4 icon-footer"></i>
               223-3425621
             </li>
+            siguenos en: 
+            <a class="link-dnone" href="https://www.facebook.com/HotelSolearesMDP">
+              <i class="fa fa-facebook-square link-dnone"></i>
+            </a>
+
+            <a href="https://www.instagram.com/hotelsoleares/">
+              <i class="fa fa-instagram icon-footer" aria-hidden="true"></i>
+            </a>
+            </li>
+          
             </ul>
           </div> 
 
@@ -221,10 +231,11 @@
               <li><a href="pages/servicios.html"> Servicios</a></li>
               <li><a href="pages/paseos.html">Lugares de interes</a></li>
               <li><a href="pages/contacto.html">Contacto</a></li>
+             
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 col-xs-6">
+          <div class="col-lg-3 col-md-6 col-xs-6 ds-none">
             <h3>Siguenos:</h3>
             <hr>
             <ul class="footer-social">
