--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -90,7 +90,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-4 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="/img/playas.png">
+              <img src="../img/playas.png">
             </div>
             <div class="card-f mheight">
               <h2>Playas de Punta mogotes</h2>
@@ -104,7 +104,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3 ">
             <div class="card-h">
-              <img src="/img/puerto.png">
+              <img src="../img/puerto.png">
             </div>
             <div class="card-f mheight">
               <h2>Puerto</h2>
@@ -118,7 +118,7 @@
           <!-- cards  -->
           <div class="card-default col-sm-12 col-12 col-md-4 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="/img/bosque.png">
+              <img src="../img/bosque.png">
             </div>
             <div class="card-f mheight">
               <h2>Bosque Peralta Ramos</h2>
