--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -87,7 +87,7 @@
     <main>
       <div class="container">
         <div class="row mt-2 p-2">
-
+          <div class="col-12 col-sm-12 col-md-6 col-lg-6">
             <h3>Contactenos</h3>
             <hr>
             <div class="mb-3">
