--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -86,7 +86,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="img/hab1.png">
+              <img src="../img/hab1.png">
             </div>
             <div class="card-f">
               <h2>Habitacion doble </h2>
@@ -98,7 +98,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3 ">
             <div class="card-h">
-              <img src="img/hab2.png">
+              <img src="../img/hab2.png">
             </div>
             <div class="card-f">
               <h2>Habitacion triple</h2>
@@ -110,7 +110,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="img/hab3.png">
+              <img src="/img/hab3.png">
             </div>
             <div class="card-f">
               <h2>Habitacion cuadruple</h2>
