--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -110,7 +110,7 @@
           <!-- cards  -->
           <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3">
             <div class="card-h">
-              <img src="/img/hab3.png">
+              <img src="../img/hab3.png">
             </div>
             <div class="card-f">
               <h2>Habitacion cuadruple</h2>
