subida de archivos

--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -78,6 +78,18 @@
     </header>
 
     <main>
+
+      <div class="banner dos">
+            <div class="cont-p">
+            <p class="text-banner">
+              Bienvenido a Hotel Soleares: tu destino perfecto para vacaciones unas inolvidables en Mar del Plata. Con ambiente acogedor y familiar.Contamos con diversos medios de pago para tu comodidad. ¡Haz de tu estadia una experiencia única y placentera!
+              </p>
+              <h2 class="titulobanner">Reservas al: <i class="fa-brands fa-whatsapp text-white pr-5"></i>&nbsp; 223 3425621 </h2>
+            </div>
+            
+        </div>
+
+
       <div class="container">
         <div class="row mt-2 p-2">
           
