--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -127,14 +127,14 @@
     <footer class="bg-dark mt-4">
       <div class="container">
         <div class="row footer-items">
-          <div class="col-lg-3 ds-none">
+          <div class="col-lg-3 col-md-3 col-sm-ds-none">
             <h3>Hotel soleares</h3>
             <hr>
             <p>Desde 1985, atendido por sus dueños, haciendo que pases las mejores vacaciones en familia.</p>
             <p>¡Te Esperamos!</p>
           </div>
 
-          <div class="col-lg-3 col-md-6 col-xs-6">
+          <div class="col-lg-3 col-md-3 col-xs-6">
             <h3 class="ds-none">Datos del Hotel</h3>
             <hr class="ds-none">
             <ul class="info-footer">
@@ -153,6 +153,7 @@
               <i class="fa-brands fa-whatsapp text-white mr-4 icon-footer"></i>
               223-3425621
             </li>
+            <li>
             siguenos en: 
             <a class="link-dnone" href="https://www.facebook.com/HotelSolearesMDP">
               <i class="fa fa-facebook-square link-dnone"></i>
@@ -166,7 +167,7 @@
             </ul>
           </div> 
 
-          <div class="col-lg-3  ds-none">
+          <div class="col-lg-3 col-md-3  col-sm-ds-none">
             <h3>Mapa del sitio</h3>
             <hr>
             <ul>
@@ -179,7 +180,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-6 col-xs-6 ds-none">
+          <div class="col-lg-3 col-md-3 col-xs-6 col-md-ds-none">
             <h3>Siguenos:</h3>
             <hr>
             <ul class="footer-social">
@@ -211,6 +212,8 @@
       </div>
     </footer>
     <!-- end footer -->
+
+
     <!-- script js boostrap --->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   </body>
