arreglo de cards height paseos, banner mas chico

--- a/pages/paseos.html
+++ b/pages/paseos.html
@@ -101,21 +101,21 @@
           <hr>
 
           <!-- cards  -->
-          <div class="card-default col-sm-12 col-12 col-md-4 col-lg-4 mb-3">
+          <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
               <img src="../img/playasmdp.jpg">
             </div>
             <div class="card-f mheight">
               <h2>Playas de Punta mogotes</h2>
               <p>
-                Mar del Plata es sinónimo de playas.La ciudad ofrece una variedad de playas que se adaptan a todos los gustos. 
+                Mar del Plata es sinónimo de playas.La ciudad ofrece una variedad de playas que se adaptan a todos los gustos.Ellas los Invitan a sus refrescantes aguas,jugar un partido de vóley o simplemente relajarse bajo el sol. 
               </p>
             </div>
           </div>
           <!-- item card -->
 
           <!-- cards  -->
-          <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3 ">
+          <div class="card-default col-12 col-sm-12 col-md-12 col-lg-4 mb-3 ">
             <div class="card-h">
               <img src="../img/puerto.png">
             </div>
@@ -129,7 +129,7 @@
           <!-- item card -->
         
           <!-- cards  -->
-          <div class="card-default col-sm-12 col-12 col-md-4 col-lg-4 mb-3">
+          <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
               <img src="../img/bosque.png">
             </div>
