subida footer bien, todo bien

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         <main>
           <div class="banner uno">
             <div class="cont-p">
-            <p class="text-banner">
-              Bienvenido a Hotel Soleares: tu destino perfecto para vacaciones unas inolvidables en Mar del Plata. Con ambiente acogedor y familiar.Contamos con diversos medios de pago para tu comodidad. ¡Haz de tu estadia una experiencia única y placentera!
+            <p class="text-banner" style="text-align: justify;">
+              Disfruta de unas vacaciones inolvidables en Mar del Plata con nosotros. Ofrecemos un ambiente acogedor y familiar, además de diversos métodos de pago para tu comodidad. ¡Convierte tu estadía en una experiencia única y placentera!
               </p>
               <h2 class="titulobanner">Reservas al: <i class="fa-brands fa-whatsapp text-white pr-5"></i>&nbsp; 223 3425621 </h2>
             </div>
@@ -191,7 +191,7 @@
             <p>¡Te Esperamos!</p>
           </div>
 
-          <div class="col-lg-3 col-md-3 col-xs-6">
+          <div class="col-lg-3 col-md-6 col-xs-6">
             <h3 class="ds-none">Datos del Hotel</h3>
             <hr class="ds-none">
             <ul class="info-footer">
@@ -236,7 +236,7 @@
             </ul>
           </div>
 
-          <div class="col-lg-3 col-md-3 col-xs-6 col-md-ds-none">
+          <div class="col-lg-3 col-md-6 col-xs-6 col-md-ds-none">
             <h3>Siguenos:</h3>
             <hr>
             <ul class="footer-social">
