--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -74,7 +74,7 @@
       <div class="banner tres">
         <div class="cont-p">
         <p class="text-banner">
-          Bienvenido a Hotel Soleares: tu destino perfecto para vacaciones unas inolvidables en Mar del Plata. Con ambiente acogedor y familiar.Contamos con diversos medios de pago para tu comodidad. ¡Haz de tu estadia una experiencia única y placentera!
+          Hotel Soleares: Disfruta de unas vacaciones inolvidables en Mar del Plata con nosotros. Ofrecemos un ambiente acogedor y familiar, además de diversos métodos de pago para tu comodidad. ¡Convierte tu estadía en una experiencia única y placentera!
           </p>
           <h2 class="titulobanner">Reservas al: <i class="fa-brands fa-whatsapp text-white pr-5"></i>&nbsp; 223 3425621 </h2>
         </div>
