subida arreglos ortografia

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                       <a class="nav-link" href="pages/servicios.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="pages/paseos.html">Lugares de interes</a>
+                      <a class="nav-link" href="pages/paseos.html">Lugares de interés</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -230,7 +230,7 @@
               <li><a href="index.html">Inicio</a></li>
               <li><a href="pages/habitaciones.html">Habitaciones</a></li>
               <li><a href="pages/servicios.html"> Servicios</a></li>
-              <li><a href="pages/paseos.html">Lugares de interes</a></li>
+              <li><a href="pages/paseos.html">Lugares de interés</a></li>
               <li><a href="pages/contacto.html">Contacto</a></li>
              
             </ul>
