--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="paseos.html">Lugares de interes</a>
+                  <a class="nav-link" href="paseos.html">Lugares de interés</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="contacto.html">Contacto</a>
@@ -102,7 +102,7 @@
             </div>
             <div class="card-f">
               <h2>Habitacion doble </h2>
-              <p>Habitaciones con camas de dos plazas, que poseen ba;o privado, excelente iluminacion, tv por cable, frigobar.</p>
+              <p>Habitaciones con camas de dos plazas, que poseen baño privado, excelente iluminacion, tv por cable, frigobar.</p>
             </div>
           </div>
           <!-- item card -->
@@ -188,7 +188,7 @@
               <li><a href="index.html">Inicio</a></li>
               <li><a href="pages/habitaciones.html">Habitaciones</a></li>
               <li><a href="pages/servicios.html"> Servicios</a></li>
-              <li><a href="pages/paseos.html">Lugares de interes</a></li>
+              <li><a href="pages/paseos.html">Lugares de interés</a></li>
               <li><a href="pages/contacto.html">Contacto</a></li>
              
             </ul>
