--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -32,7 +32,7 @@
               <a class="nav-link active" aria-current="page" href="servicios.html">Servicios</a>
               </li>
               <li class="nav-item">
-              <a class="nav-link" href="paseos.html">Lugares de interes</a>
+              <a class="nav-link" href="paseos.html">Lugares de interés</a>
               </li>
               <li class="nav-item">
               <a class="nav-link" href="contacto.html">Contacto</a>
@@ -117,7 +117,7 @@
               <b>Las habitaciones cuentan con los siguientes servicios:</b>
               <ul>
                 <li>Habitaciones cómodas con excelente servicio.</li>
-                <li> Baño privado.</li>
+                <li>Baño privado.</li>
                 <li>Frigobar.</li>
                 <li>TV con cable</li>
                 <li>Alarma contra incendios.</li>
@@ -190,7 +190,7 @@
               <li><a href="index.html">Inicio</a></li>
               <li><a href="pages/habitaciones.html">Habitaciones</a></li>
               <li><a href="pages/servicios.html"> Servicios</a></li>
-              <li><a href="pages/paseos.html">Lugares de interes</a></li>
+              <li><a href="pages/paseos.html">Lugares de interés</a></li>
               <li><a href="pages/contacto.html">Contacto</a></li>
              
             </ul>
