--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -43,7 +43,7 @@
                   <a class="nav-link" href="servicios.html">Servicios</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="paseos.html">Lugares de interes</a>
+                  <a class="nav-link" href="paseos.html">Lugares de interés</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="contacto.html">Contacto</a>
@@ -174,7 +174,7 @@
               <li><a href="index.html">Inicio</a></li>
               <li><a href="pages/habitaciones.html">Habitaciones</a></li>
               <li><a href="pages/servicios.html"> Servicios</a></li>
-              <li><a href="pages/paseos.html">Lugares de interes</a></li>
+              <li><a href="pages/paseos.html">Lugares de interés</a></li>
               <li><a href="pages/contacto.html">Contacto</a></li>
              
             </ul>
