html comentado y etiquetas para seo

--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -16,7 +16,9 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-white d-flex ">
         <div class="container-lg">
-          <a class="navbar-brand logo" href="#"><img src="../img/logo-nav2.png"></a>
+          <a class="navbar-brand logo" href="#">
+            <img src="../img/logo-nav2.png" alt="logo-hotel-soleares">
+          </a>
           <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -73,13 +75,13 @@
     <main>
       <div class="banner tres">
         <div class="cont-p">
+          <h1>Hotel Soleares</h1>
         <p class="text-banner">
-          Hotel Soleares: Disfruta de unas vacaciones inolvidables en Mar del Plata con nosotros. Ofrecemos un ambiente acogedor y familiar, además de diversos métodos de pago para tu comodidad. ¡Convierte tu estadía en una experiencia única y placentera!
+          Haz de tu visita a Mar del Plata algo inolvidable al hospedarte en nuestro hotel. Disfruta de un entorno acogedor y familiar que hará que tu estadía sea única y placentera.
           </p>
           <h2 class="titulobanner">Reservas al: <i class="fa-brands fa-whatsapp text-white pr-5"></i>&nbsp; 223 3425621 </h2>
         </div>
-        
-    </div>
+      </div>
 
       <div class="container">
         <div class="row mt-2 p-2">
@@ -91,13 +93,13 @@
               <div id="carouselExampleFade" class="carousel slide carousel-fade">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/hab1.png" class="d-block w-100" alt="...">
+                    <img src="../img/hab1.png" class="d-block w-100" alt="habitacion-doble">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/hab2.png" class="d-block w-100" alt="...">
+                    <img src="../img/hab2.png" class="d-block w-100" alt="habitacion-triple">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/hab3.png" class="d-block w-100" alt="...">
+                    <img src="../img/hab3.png" class="d-block w-100" alt="habitacion-cuadruple">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -135,7 +137,7 @@
         </div>
       </div>
       <article class="alert-warning alert container info-advice">
-        <p>Durante Enero y Febrero alojandote en nuestro Hotel, tendras 50% de descuento en los Balnearios 22 y 23.</p>
+        <h2>Durante Enero y Febrero alojandote en nuestro Hotel, tendras 50% de descuento en los Balnearios 22 y 23.</h2>
       </article>
     </main>
 
