--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -24,7 +24,7 @@
                   <div class="container-lg">
 
             <a class="navbar-brand logo" href="#">
-              <img src="../img/logo-nav2.png">
+              <img src="../img/logo-nav2.png" alt="logo-hotel-soleares">
             </a>
 
             <button class="navbar-toggler"type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
