--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
           <section class="container-fluid pt-4 bg-com">
             <div class="container">
               <div class="titulo-booking">
-                <h2>HUESPEDES CONTENTOS!</h2>
+                <h2>User
+                  HUESPEDES QUE NOS ELIGIERON!
+                  </h2>
                 <h3>Algunos comentarios recibidos en Booking.com.</h3>
                 <h4><a class="w-100" href="https://www.booking.com/hotel/ar/soleares.es-ar.html#tab-reviews" target="_blank">Ver Todos Los Comentarios.</a></h4>
               </div>
