--- a/pages/habitaciones.html
+++ b/pages/habitaciones.html
@@ -96,7 +96,7 @@
           <h3>Habitaciones</h3>
           <hr>
           <!-- cards  -->
-          <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3">
+          <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
               <img src="../img/hab1.png" alt="habitacion-doble">
             </div>
@@ -108,7 +108,7 @@
           <!-- item card -->
 
           <!-- cards  -->
-          <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3 ">
+          <div class="card-default col-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
               <img src="../img/hab2.png" alt="habitacion-triple">
             </div>
@@ -120,7 +120,7 @@
           <!-- item card -->
         
           <!-- cards  -->
-          <div class="card-default col-12 col-sm-12 col-md-4 col-lg-4 mb-3">
+          <div class="card-default ccol-sm-12 col-12 col-md-12 col-lg-4 mb-3">
             <div class="card-h">
               <img src="../img/hab3.png" alt="habitacion-cuadruple">
             </div>
